--- a/Rmd/orsf_examples.Rmd
+++ b/Rmd/orsf_examples.Rmd
@@ -16,12 +16,8 @@ library(aorsf)
 library(tidyverse)
 library(survival)
 
-penguins_orsf$bill_length_mm <- 
- as.numeric(penguins_orsf$bill_length_mm)
-penguins_orsf$flipper_length_mm <-
- as.numeric(penguins_orsf$flipper_length_mm)
-
 ```
+
 
 ## Classification
 
@@ -71,141 +67,143 @@ orsf_update(fit_penguins, data = penguins_numeric)
 
 ### Difference between oblique and axis-based
 
-The difference between oblique random forests and axis-based random forests is most clear in their decision surface. The decision surface of an oblique forest is smooth:
+For this example, we modify integer columns in the penguins data to be doubles so that `aorsf` will not throw an error when we ask it to predict at non-integer values of these predictors:
 
 ```{r}
 
-fit_tree <- orsf(penguins_numeric,
-                 n_tree = 1,
-                 formula = species ~ bill_length_mm + flipper_length_mm,
-                 control = orsf_control_classification())
+penguins_orsf <- penguins_orsf %>% 
+ mutate(bill_length_mm = as.numeric(bill_length_mm),
+        flipper_length_mm = as.numeric(flipper_length_mm))
 
-fit_tree <- orsf_update(fit_penguins, 
-                        control = orsf_control_classification(),
-                        n_tree = 1, 
-                        tree_seeds = 358815)
+```
+
+We will also use the same code to make several plots, so I define a function below to minimize repetition.
+
+```{r}
+
+plot_decision_surface <- function(predictions, grid, title){
+ 
+ # this is not a general function for plotting
+ # decision surfaces. It just helps to minimize 
+ # copying and pasting of code.
+ 
+ colnames(predictions) <- levels(penguins_orsf$species)
+ 
+ class_preds <- bind_cols(grid, predictions) %>%
+  pivot_longer(cols = c(Adelie,
+                        Chinstrap,
+                        Gentoo)) %>%
+  group_by(flipper_length_mm, bill_length_mm) %>%
+  arrange(desc(value)) %>%
+  slice(1)
+ 
+ cols <- c("darkorange", "purple", "cyan4")
+
+ ggplot(class_preds, aes(bill_length_mm, flipper_length_mm)) +
+  geom_contour_filled(aes(z = value, fill = name),
+                      alpha = .25) +
+  geom_point(data = penguins_orsf,
+             aes(color = species, shape = species),
+             size = 3,
+             alpha = 0.8) +
+  scale_color_manual(values = cols) +
+  scale_fill_manual(values = cols) +
+  labs(x = "\nBill length, scaled",
+       y = "Bill depth, scaled\n") +
+  theme_minimal() +
+  scale_x_continuous(expand = c(0,0)) +
+  scale_y_continuous(expand = c(0,0)) +
+  theme(panel.grid = element_blank(),
+        panel.border = element_rect(fill = NA),
+        legend.position = '') + 
+  labs(title = title)
+ 
+}
+
+```
+
+We also use a grid of points for plotting the decision surface, which is created as follows:
+
+```{r}
 
 grid <- expand_grid(
 
  flipper_length_mm = seq(min(penguins_orsf$flipper_length_mm),
                      max(penguins_orsf$flipper_length_mm),
-                  len = 100),
+                  len = 200),
  bill_length_mm = seq(min(penguins_orsf$bill_length_mm),
                       max(penguins_orsf$bill_length_mm),
-                      len = 100)
+                      len = 200)
 )
-
-pred_tree <- predict(fit_tree, new_data = grid, pred_type = 'prob')
-pred_forest <- predict(fit_penguins, new_data = grid, pred_type = 'prob')
-
-colnames(pred_forest) <- levels(penguins_orsf$species)
-colnames(pred_tree) <- levels(penguins_orsf$species)
-
-grid_forest <- bind_cols(grid, pred_forest) %>%
- pivot_longer(cols = c(Adelie,
-                       Chinstrap,
-                       Gentoo)) %>%
- group_by(flipper_length_mm, bill_length_mm) %>%
- arrange(desc(value)) %>%
- slice(1)
-
-grid_tree <- bind_cols(grid, pred_tree) %>%
- pivot_longer(cols = c(Adelie,
-                       Chinstrap,
-                       Gentoo)) %>%
- group_by(flipper_length_mm, bill_length_mm) %>%
- arrange(desc(value)) %>%
- slice(1)
-
-cols <- c("darkorange", "purple", "cyan4")
-
-ggplot(grid_forest, aes(bill_length_mm, flipper_length_mm)) +
- geom_point(data = penguins_orsf,
-            aes(color = species, shape = species),
-            size = 3,
-            alpha = 0.8) +
- geom_contour_filled(aes(z = value, fill = name),
-                     alpha = .25) +
- scale_color_manual(values = cols) +
- scale_fill_manual(values = cols) +
- labs(x = "\nBill length, scaled",
-      y = "Bill depth, scaled\n") +
- theme_minimal() +
- scale_x_continuous(expand = c(0,0)) +
- scale_y_continuous(expand = c(0,0)) +
- theme(panel.grid = element_blank(),
-       panel.border = element_rect(fill = NA),
-       legend.position = '') + 
- labs(title = "Decision surface of an oblique forest")
-
-ggplot(grid_tree, aes(bill_length_mm, flipper_length_mm)) +
- geom_point(data = penguins_orsf,
-            aes(color = species, shape = species),
-            size = 3,
-            alpha = 0.8) +
- geom_contour_filled(aes(z = value, fill = name),
-                     alpha = .25) +
- scale_color_manual(values = cols) +
- scale_fill_manual(values = cols) +
- labs(x = "\nBill length, scaled",
-      y = "Bill depth, scaled\n") +
- theme_minimal() +
- scale_x_continuous(expand = c(0,0)) +
- scale_y_continuous(expand = c(0,0)) +
- theme(panel.grid = element_blank(),
-       panel.border = element_rect(fill = NA),
-       legend.position = '') + 
- labs(title = "Decision surface of an oblique forest")
 
 ```
 
-This is because oblique trees create decision boundaries that are neither parallel or perpendicular to the axes of corresponding predictors. 
 
-By comparison, an axis based forest's decision surface is sharper:
+Axis-based random forests comprise axis-based trees, which partition data by splitting them into subgroups using a single variable. 
 
 ```{r}
 
-library(ranger)
+# ranger and randomForestSRC are fantastic packages for
+# axis-based random forests. For simplicity, we use orsf
+# to fit one here. Note that orsf with mtry = 1 is similar
+# to an extremely randomized axis-based forest 
 
-fit_ranger <- ranger::ranger(
- data = penguins_orsf, 
- formula = species ~ bill_length_mm + flipper_length_mm,
- probability = TRUE
-)
+fit_axis_tree <- penguins_orsf %>% 
+ orsf(species ~ bill_length_mm + flipper_length_mm,
+      n_tree = 1,
+      mtry = 1,
+      tree_seeds = 106760)
 
-pred_ranger <- predict(fit_ranger, data = grid)$predictions
+pred_axis_tree <- predict(fit_axis_tree, new_data = grid)
 
-colnames(pred_ranger) <- levels(penguins_orsf$species)
+```
 
-grid_ranger <- bind_cols(grid, pred_ranger) %>%
- pivot_longer(cols = c(Adelie,
-                       Chinstrap,
-                       Gentoo)) %>%
- group_by(flipper_length_mm, bill_length_mm) %>%
- arrange(desc(value)) %>%
- slice(1)
+With axis-based splits, decision boundaries will always be perpendicular to the axis of the relevant predictor:
 
-cols <- c("darkorange", "purple", "cyan4")
+```{r}
 
-ggplot(grid_ranger, aes(bill_length_mm, flipper_length_mm)) +
- geom_point(data = penguins_orsf,
-            aes(color = species, shape = species),
-            size = 3,
-            alpha = 0.8) +
- geom_contour_filled(aes(z = value, fill = name),
-                     alpha = .25) +
- scale_color_manual(values = cols) +
- scale_fill_manual(values = cols) +
- labs(x = "\nBill length, scaled",
-      y = "Bill depth, scaled\n") +
- theme_minimal() +
- scale_x_continuous(expand = c(0,0)) +
- scale_y_continuous(expand = c(0,0)) +
- theme(panel.grid = element_blank(),
-       panel.border = element_rect(fill = NA),
-       legend.position = '') + 
- labs(title = "Decision surface of an axis-based forest")
+plot_decision_surface(pred_axis_tree, grid, "Axis-based tree")
 
+```
+
+When predictions from hundreds of axis-based trees are aggregated, the collective decision surface is much more flexible. However, even with hundreds of axis-based trees, it is difficult to capture smooth decision boundaries:
+
+```{r}
+
+fit_axis_forest <- fit_axis_tree %>% 
+ orsf_update(n_tree = 500)
+
+pred_axis_forest <- predict(fit_axis_forest, new_data = grid)
+
+plot_decision_surface(pred_axis_forest, grid, "Axis-based forest")
+
+```
+
+
+Instead of using a single predictor to split data, oblique trees use a weighted combination of predictors. This creates decision boundaries that are neither parallel or perpendicular to the axes of corresponding predictors:
+
+```{r}
+
+fit_oblique_tree <- fit_axis_tree %>% 
+ orsf_update(mtry = 2)
+
+pred_oblique_tree <- predict(fit_oblique_tree, new_data = grid)
+
+plot_decision_surface(pred_oblique_tree, grid, "Oblique tree")
+
+```
+
+And, when predictions from these trees are aggregated, they do a great job of capturing smooth geometries!
+
+```{r}
+
+fit_oblique_forest <- fit_oblique_tree %>% 
+ orsf_update(n_tree = 500)
+
+pred_oblique_forest <- predict(fit_oblique_forest, 
+                               new_data = grid)
+
+plot_decision_surface(pred_oblique_forest, grid, "Oblique forest")
 
 ```
 
@@ -305,374 +303,6 @@ roc_scores <- test_pred %>%
   roc_auc_survival(truth = event_time, .pred)
 
 roc_scores
-
-```
-
-
-## Comparisons with existing software (classification)
-
-Several other R packages can grow oblique forests for classification, including 
-
-- `RLT` (https://cran.r-project.org/package=RLT)
-- `ODRF` (https://liuyu-star.github.io/ODRF/)
-- `obliqueRF` (no longer on CRAN, so not included)
-
-```{r, warning=FALSE, message=FALSE}
-
-library(ODRF)
-library(RLT)
-library(microbenchmark)
-
-```
-
-### Computation
-
-We'll use the the `attrition` data from the `modeldata` R package.
-
-```{r}
-
-# keep only numeric predictors (easier to convert to matrix)
-data_all <- as_tibble(modeldata::attrition) %>% 
- select(outcome = Attrition, where(is.numeric))
-
-# x and y matrices for ODRF and RLT
-x <- as.matrix(select(data_all, -outcome))
-y <- data_all$outcome
-
-```
-
-
-Compare the time taken to grow a forest of 100 trees with the `RLT`, `aorsf`, and `ODRF` packages:
-
-```{r, warning=FALSE, message=FALSE, eval=FALSE}
-
-options(microbenchmark.unit="relative")
-
-# This benchmark is run using a 24-core processor
-bm <- microbenchmark::microbenchmark(
- fit_orsf = orsf(data_all, outcome ~ ., n_tree = 100, n_thread = 0),
- fit_odrf = ODRF(X = x, y = y,  parallel = TRUE, ntrees = 100),
- fit_rlt = RLT(x = x, y = y,  model = 'classification', ntrees = 100, 
-               combsplit = 3, reinforcement = TRUE),
- times = 10
-)
-
-```
-
-```{r, echo=FALSE}
-
-options(microbenchmark.unit="relative")
-
-bm <- structure(list(expr = structure(c(1L, 1L, 2L, 3L, 2L, 1L, 2L, 
-3L, 3L, 1L, 2L, 3L, 1L, 2L, 2L, 3L, 3L, 1L, 1L, 2L, 1L, 2L, 1L, 
-3L, 1L, 3L, 2L, 3L, 2L, 3L), levels = c("fit_orsf", "fit_odrf", 
-"fit_rlt"), class = "factor"), time = c(48109600, 49112600, 10993356800, 
-48030845700, 11083532300, 50480400, 11266350100, 49670644800, 
-48571226500, 51156800, 11005391000, 49984885500, 50464800, 11087423500, 
-11290844100, 50331647300, 51760008300, 41431800, 40718000, 11054960000, 
-48484100, 11253251900, 48914400, 47786809400, 52255200, 44269840300, 
-11077901500, 44499918900, 11067692900, 43761864500)), class = c("microbenchmark", 
-"data.frame"), row.names = c(NA, -30L))
-
-print(bm)
-
-```
-
-Based on a benchmark on the `attrition` data (`nrow` = `r nrow(data_all)`, `ncol` = `r ncol(data_all)`), `aorsf` runs faster than `ODRF` and `RLT`. 
-
-### Prediction
-
-Using the same `attrition` data, compare the prediction accuracy of the three oblique random forest R packages. First, split intro train/test sets:
-
-```{r}
-
-set.seed(730)
-train_rows <- sample(nrow(data_all), nrow(data_all)/2)
-
-data_train <- data_all[train_rows, ]
-data_test <- data_all[-train_rows, ]
-
-x_train <- as.matrix(select(data_train, -outcome))
-y_train <- data_train$outcome
-
-x_test <- as.matrix(select(data_test, -outcome))
-y_test <- data_test$outcome
-
-```
-
-Next, fit the models to the training data:
-
-```{r, warning=FALSE}
-
-fit_orsf = orsf(data_train, outcome ~ ., n_tree = 100)
-
-fit_odrf = ODRF(X = x_train, y = y_train, ntrees = 100)
-
-fit_rlt = RLT(x = x_train, y = y_train, model = 'classification', 
-              combsplit = 3, reinforcement = TRUE, ntrees = 100)
-
-```
-
-Last, evaluate in the testing data
-
-```{r}
-
-eval <- tibble(
- orsf = predict(fit_orsf, new_data = data_test)[, 1],
- odrf = predict(fit_odrf, Xnew = x_test, type = 'prob')[, 1],
- rlt  = predict(fit_rlt, testx = x_test)$ProbPrediction[, 1],
- truth = data_test$outcome
-) %>% 
- pivot_longer(-truth) %>% 
- group_by(name) %>% 
- roc_auc(truth = truth, value) %>% 
- arrange(desc(.estimate))
-
-eval
-
-```
-
-Not surprisingly, discrimination is very similar when all the models being compared are oblique random forests.
-
-
-## Comparisons with existing software (regression)
-
-Several other R packages can grow oblique forests for regression, including 
-
-- `RLT` (https://cran.r-project.org/package=RLT)
-- `ODRF` (https://liuyu-star.github.io/ODRF/)
-- `obliqueRF` (no longer on CRAN, so not included)
-
-```{r, warning=FALSE, message=FALSE}
-
-library(ODRF)
-library(RLT)
-library(microbenchmark)
-
-```
-
-### Computation
-
-We'll use the the `ames` housing data from the `modeldata` R package.
-
-```{r}
-
-# keep only numeric predictors (easier to convert to matrix)
-data_all <- as_tibble(modeldata::ames) %>% 
- mutate(outcome = log(Sale_Price)) %>%
- select(outcome, where(is.numeric), -Sale_Price)
-
-# x and y matrices for ODRF and RLT
-x <- as.matrix(select(data_all, -outcome))
-y <- data_all$outcome
-
-```
-
-
-Compare the time taken to grow a forest of 100 trees with the `RLT`, `aorsf`, and `ODRF` packages:
-
-```{r, warning=FALSE, message=FALSE, eval=FALSE}
-
-options(microbenchmark.unit="relative")
-
-# This benchmark is run using a 24-core processor
-bm <- microbenchmark::microbenchmark(
- fit_orsf = orsf(data_all, outcome ~ ., n_tree = 100, n_thread = 0),
- fit_odrf = ODRF(X = x, y = y,  parallel = TRUE, ntrees = 100),
- fit_rlt = RLT(x = x, y = y,  model = 'regression', ntrees = 100,
-               combsplit = 3, reinforcement = TRUE),
- times = 1
-)
-
-```
-
-```{r, echo=FALSE}
-
-options(microbenchmark.unit="relative")
-
-bm <- structure(list(expr = structure(c(1L, 1L, 2L, 3L, 2L, 1L, 2L, 
-3L, 3L, 1L, 2L, 3L, 1L, 2L, 2L, 3L, 3L, 1L, 1L, 2L, 1L, 2L, 1L, 
-3L, 1L, 3L, 2L, 3L, 2L, 3L), levels = c("fit_orsf", "fit_odrf", 
-"fit_rlt"), class = "factor"), time = c(48109600, 49112600, 10993356800, 
-48030845700, 11083532300, 50480400, 11266350100, 49670644800, 
-48571226500, 51156800, 11005391000, 49984885500, 50464800, 11087423500, 
-11290844100, 50331647300, 51760008300, 41431800, 40718000, 11054960000, 
-48484100, 11253251900, 48914400, 47786809400, 52255200, 44269840300, 
-11077901500, 44499918900, 11067692900, 43761864500)), class = c("microbenchmark", 
-"data.frame"), row.names = c(NA, -30L))
-
-print(bm)
-
-```
-
-Based on a benchmark on the `attrition` data (`nrow` = `r nrow(data_all)`, `ncol` = `r ncol(data_all)`), `aorsf` runs faster than `ODRF` and `RLT`. 
-
-### Prediction
-
-Using the same `attrition` data, compare the prediction accuracy of the three oblique random forest R packages. First, split intro train/test sets:
-
-```{r}
-
-set.seed(730)
-train_rows <- sample(nrow(data_all), nrow(data_all)/2)
-
-data_train <- data_all[train_rows, ]
-data_test <- data_all[-train_rows, ]
-
-x_train <- as.matrix(select(data_train, -outcome))
-y_train <- data_train$outcome
-
-x_test <- as.matrix(select(data_test, -outcome))
-y_test <- data_test$outcome
-
-```
-
-Next, fit the models to the training data:
-
-```{r, warning=FALSE}
-
-fit_orsf = orsf(data_train, outcome ~ ., n_tree = 100)
-
-fit_odrf = ODRF(X = x_train, y = y_train, ntrees = 100)
-
-fit_rlt = RLT(x = x_train, y = y_train, model = 'regression', 
-              combsplit = 3, reinforcement = TRUE, ntrees = 100)
-
-```
-
-Last, evaluate in the testing data
-
-```{r}
-
-eval <- tibble(
- orsf = predict(fit_orsf, new_data = data_test)[, 1],
- odrf = predict(fit_odrf, Xnew = x_test)[,1],
- rlt  = predict(fit_rlt, testx = x_test)$Prediction,
- truth = data_test$outcome
-) %>% 
- pivot_longer(-truth) %>% 
- group_by(name) %>% 
- rsq(truth = truth, value) %>% 
- arrange(desc(.estimate))
-
-eval
-
-```
-
-prediction accuracy is similar.
-
-
-## Comparison with existing software (survival)
-
-A much more thorough comparison of `aorsf` and other learners for survival data has been published (see DOI: 10.1080/10618600.2023.2231048). Below is an example comparing `aorsf` to the two most widely used R packages for axis based random forests: `randomForestSRC` and `ranger`. Since I used mostly base R to run the classification example, I'll run this using `tidy` tools.
-
-```{r, warning=FALSE, message=FALSE}
-library(ranger)
-library(randomForestSRC)
-library(riskRegression)
-```
-
-Start with a recipe to pre-process data
-
-```{r}
-
-imputer <- recipe(pbc_orsf, formula = time + status ~ .) %>% 
- step_rm(id) %>% 
- step_impute_mean(all_numeric_predictors()) %>%
- step_impute_mode(all_nominal_predictors()) 
-
-```
-
-Next create a 10-fold cross validation object and pre-process the data:
-
-```{r}
-
-# 10-fold cross validation; make a container for the pre-processed data
-analyses <- vfold_cv(data = pbc_orsf, v = 10) %>%
- mutate(recipe = map(splits, ~prep(imputer, training = training(.x))),
-        train = map(recipe, juice),
-        test = map2(splits, recipe, ~bake(.y, new_data = testing(.x))))
-
-analyses
-
-```
-
-Define functions for a 'workflow' with `randomForestSRC`, `ranger`, and `aorsf`. 
-
-```{r}
-
-rfsrc_wf <- function(train, test, pred_horizon){
- 
- # rfsrc does not like tibbles, so cast input data into data.frames
- train <- as.data.frame(train)
- test <- as.data.frame(test)
- 
- rfsrc(formula = Surv(time, status) ~ ., data = train) %>% 
-  predictRisk(newdata = test, times = pred_horizon) %>% 
-  as.numeric()
- 
-}
-
-ranger_wf <- function(train, test, pred_horizon){
- 
- ranger(Surv(time, status) ~ ., data = train) %>% 
-  predictRisk(newdata = test, times = pred_horizon) %>% 
-  as.numeric()
- 
-}
-
-aorsf_wf <- function(train, test, pred_horizon){
- 
- train %>% 
-  orsf(Surv(time, status) ~ .,) %>% 
-  predict(new_data = test, 
-          pred_type = 'risk',
-          pred_horizon = pred_horizon) %>% 
-  as.numeric()
- 
-}
-
-```
-
-Run the 'workflows' on each fold:
-
-```{r}
-
-# 5 year risk prediction
-ph <- 365.25 * 5
-
-results <- analyses %>% 
- transmute(test, 
-           pred_aorsf = map2(train, test, aorsf_wf, pred_horizon = ph),
-           pred_rfsrc = map2(train, test, rfsrc_wf, pred_horizon = ph),
-           pred_ranger = map2(train, test, ranger_wf, pred_horizon = ph))
-
-```
-
-Next unnest each column to get back a `tibble` with all of the testing data and predictions.
-
-```{r}
-
-results <- results %>% 
- unnest(everything())
-
-glimpse(results)
-
-```
-
-And finish by aggregating the predictions and computing performance in the testing data. Note that I am computing one statistic for all predictions instead of computing one statistic for each fold. This approach is fine when you have smaller testing sets and/or small event counts.
-
-```{r}
-
-Score(
- object = list(aorsf = results$pred_aorsf,
-               rfsrc = results$pred_rfsrc,
-               ranger = results$pred_ranger),
- formula = Surv(time, status) ~ 1, 
- data = results, 
- summary = 'IPA',
- times = ph
-)
 
 ```
 
