--- a/README.Rmd
+++ b/README.Rmd
@@ -36,11 +36,9 @@ Fit, interpret, and make predictions with oblique random forests (RFs).
 
 ## Why aorsf?
 
-- Hundreds of times faster than other software for oblique RFs.^1^
+- Fast and versatile tools for oblique RFs.^1^
 
 - Accurate predictions.^2^
-
-- Computes partial dependence and variable importance.^2^
 
 - Intuitive API with formula based interface.
 
@@ -61,7 +59,20 @@ You can install the development version of aorsf from [GitHub](https://github.co
 remotes::install_github("ropensci/aorsf")
 ```
 
-## What is an oblique decision tree?
+## Get started
+
+```{r}
+library(aorsf)
+library(tidyverse)
+```
+
+`aorsf` fits several types of oblique RFs with the `orsf()` function, including survival, classification, and regression RFs. My personal favorite is the oblique survival RF with accelerated Cox regression because it has a great combination of prediction accuracy and computational efficiency (see [JCGS paper](https://doi.org/10.1080/10618600.2023.2231048)).^2^
+
+```{r, child='Rmd/orsf-fit-intro.Rmd'}
+
+```
+
+## What does "oblique" mean?
 
 Decision trees are grown by splitting a set of training data into non-overlapping subsets, with the goal of having more similarity within the new subsets than between them. When subsets are created with a single predictor, the decision tree is *axis-based* because the subset boundaries are perpendicular to the axis of the predictor. When linear combinations (i.e., a weighted sum) of variables are used instead of a single variable, the tree is *oblique* because the boundaries are neither parallel nor perpendicular to the axis. 
 
@@ -74,18 +85,7 @@ knitr::include_graphics('man/figures/tree_axis_v_oblique.png')
 
 ```
 
-So, how does this difference translate to real data, and how does it impact random forests comprising hundreds of axis-based or oblique trees? We will demonstrate this using the `penguin` data from the magnificent `palmerpenguins` R package.
-
-```{r}
-library(aorsf)
-library(tidyverse)
-
-penguins_orsf <- penguins_orsf %>% 
- mutate(bill_length_mm = as.numeric(bill_length_mm),
-        flipper_length_mm = as.numeric(flipper_length_mm))
-```
-
-We will also use this function to make several plots:
+So, how does this difference translate to real data, and how does it impact random forests comprising hundreds of axis-based or oblique trees? We will demonstrate this using the `penguin` data from the magnificent `palmerpenguins` R package. We will also use this function to make several plots:
 
 ```{r}
 plot_decision_surface <- function(predictions, title, grid){
@@ -143,8 +143,7 @@ grid <- expand_grid(
 ```
 
 
-We use `orsf` with `mtry=1` to fit axis-based trees and random forests. Then we use `orsf_update` to expand axis-based trees to oblique ones, and single trees to forests:
-
+We use `orsf` with `mtry=1` to fit axis-based trees: 
 
 ```{r}
 fit_axis_tree <- penguins_orsf %>% 
@@ -153,6 +152,11 @@ fit_axis_tree <- penguins_orsf %>%
       mtry = 1,
       tree_seeds = 106760)
 
+```
+
+Next we use `orsf_update` to copy and modify the original model, expanding it to fit an oblique tree by using `mtry=2` instead of `mtry=1`, and to include 500 trees instead of 1:
+
+```{r}
 fit_axis_forest <- fit_axis_tree %>% 
  orsf_update(n_tree = 500)
 
@@ -161,8 +165,11 @@ fit_oblique_tree <- fit_axis_tree %>%
 
 fit_oblique_forest <- fit_oblique_tree %>% 
  orsf_update(n_tree = 500)
+```
 
+And now we have all we need to visualize decision surfaces using predictions from these four fits:
 
+```{r}
 preds <- list(fit_axis_tree,
               fit_axis_forest,
               fit_oblique_tree,
@@ -187,48 +194,26 @@ cowplot::plot_grid(plotlist = plots)
 
 ```
 
+## Variable importance
 
-
-## Examples
-
-`orsf()` fits several types of oblique RFs. My personal favorite is the accelerated oblique survival RF because it has a great combination of prediction accuracy and computational efficiency (see [JCGS paper](https://doi.org/10.1080/10618600.2023.2231048)).^2^
-
-```{r, child='Rmd/orsf-fit-accelerated.Rmd'}
-
-```
-
-### Inspect
-
-Printing the output from `orsf()` will give some information and descriptive statistics about the ensemble.
-
-```{r}
-fit
-```
-
-- See [print.ObliqueForest](https://docs.ropensci.org/aorsf/reference/print.orsf_fit.html) for a description of each line in the printed output.
-
-- See [orsf examples](https://docs.ropensci.org/aorsf/reference/orsf.html#examples) for more details on controlling ORSF ensemble fits and using them in prediction modeling workflows.
-
-### Variable importance
-
-The importance of individual variables can be estimated in three ways using `aorsf`:
+The importance of individual predictor variables can be estimated in three ways using `aorsf` and can be used on any type of oblique RF. Also, variable importance functions always return a named character vector
 
 - **negation**^2^: `r aorsf:::roxy_vi_describe('negate')`
 
   ```{r}
-  orsf_vi_negate(fit)
+  orsf_vi_negate(pbc_fit)
   ```
 
 - **permutation**: `r aorsf:::roxy_vi_describe('permute')`
 
   ```{r}
-  orsf_vi_permute(fit)
+  orsf_vi_permute(penguin_fit)
   ```
   
 - **analysis of variance (ANOVA)**^3^: `r aorsf:::roxy_vi_describe('anova')`
 
   ```{r}
-  orsf_vi_anova(fit)
+  orsf_vi_anova(bill_fit)
   ```
 
 You can supply your own R function to estimate out-of-bag error when using negation or permutation importance (see [oob vignette](https://docs.ropensci.org/aorsf/articles/oobag.html))
@@ -240,7 +225,7 @@ You can supply your own R function to estimate out-of-bag error when using negat
 The summary function, `orsf_summarize_uni()`, computes PD for as many variables as you ask it to, using sensible values.
 
 ```{r}
-orsf_summarize_uni(fit, n_variables = 2)
+orsf_summarize_uni(pbc_fit, n_variables = 2)
 ```
 
 
@@ -267,7 +252,7 @@ Comparisons between `aorsf` and existing software are presented in our [JCGS pap
 
 - reports the probability that each variable importance technique will rank a relevant variable with higher importance than an irrelevant variable.
 
-A more hands-on comparison of `aorsf` and other R packages is provided in [orsf examples](https://docs.ropensci.org/aorsf/reference/orsf.html#tidymodels)
+<!-- A more hands-on comparison of `aorsf` and other R packages is provided in [orsf examples](https://docs.ropensci.org/aorsf/reference/orsf.html#tidymodels) -->
 
 
 ## References
